fix small things and add unsensory part 1

--- a/memo.html
+++ b/memo.html
@@ -79,6 +79,68 @@
           <p> Memo</p>
 
           <div class="listSplit">
+            <p>Unsensory— <br>Designing with the Invisible</p>
+            <p>Sunday</p>
+            <p>2022 01 23 - 6:00 PM</p>
+          </div>
+
+          <p><b>Out of Sight, Out of Mind.</b></p>
+          <p style="margin-left: 40px;" >A Human Being is a Bundle of senses working hard to perceive the World. Eyes, Ears, Skin and the others are called sensory receptors, but the images carried by these words are much too passive for sensory organs. Human sensors are Boldly open to the world. They aren’t “receptors”, but active, positive organs. An unlimited number of invisible sensory tentacles sprouting from the brain are exploring the world. Let’s think about human beings with this image in mind.</p>
+          <p style="margin-left: 40px;">— Hara Kenya, “Haptic” (2014)</p>
+          <p>In this world, there are essentially four types of things. </p>
+          <img src="image/unsensory/01.png" width="100%"></img>
+          <p>Each thing seemingly exists neatly within its box — however, the divisions are not innate, but are experienced due to the boundaries of human senses: the Tangible and the Intangible are divided according to the bounds of our brains and biology; the invisible-intangible is just as present, and just as real as light and heat — but sit just outside of our ability to be aware of them. </p>
+          <p>Humans have invented tools to sense and measure the invisible and intangible — artificial eyes, ears, and fingertips that let us push our hands beyond the curtains of standard sense — extensions of the sensory self. By extending an antenna and tuning into these frequencies, we can dip our senses into an invisible presence, sub-dermal to reality — The unsensory.</p>
+          <p><b>The Sensory</b></p>
+          <p>The Sensory is the world as experienced by our senses — Light, Heat, Scent, Sound, Touch, Texture, Balance, Weight, and so on. Our body is a finely-tuned sensor for multi-layered channels of information, processed instantaneously by the brain to smoothly build our understanding of the world around us, and ourselves within it. </p>
+          <img src="image/unsensory/02.png" width="100%"></img>
+          <p>(Left to Right: Kuma Kengo’s “Cast-Off Snakeskin paper towel”, Fukasawa Naoto’s Juice Skin Packaging, and Hara Kenya’s Humidifier)</p>
+          <p>In his exhibition “Haptic”, Hara asked designers to design with special attention to texture and tactile information — either expressing information through a haptic channel or by expressing haptic information visually. For instance: translucent paper towels that mimic the texture of shed-off snakeskin, Juice Boxes whose surfaces mimic the skin of the fruit contained within, and a humidifier that evaporates a grid of individual beads of water like sweat from the pores in the skin. These all heighten some aspect of the tactile, cutting a familiar haptic idea from one context and pasting it into another.<p>
+          <p><b>The Cross-Sensory</b></p>
+          <p>Likewise, the “Cross-Sensory" could be seen as the transfer of one sense to another. For example, the invention of Braille and Tactile images cross-senses the visual (Written word, Imagery) into the Haptic. By use of FLIR imagery, we can transfer the sensory world of Heat to the sensory world of Vision. Likewise— by use of Echolocation, the physical world is cross-sensed through intuiting information from sound — a mental image or proprioceptive sense of space. Perhaps the most common form of cross-sense, one you’re experiencing right now, is the cross-transfer of written word and imagination, as when a scene, sense, or object is described and then pictured in the brain (or vice-versa).</p>
+          <img src="image/unsensory/03.png" width="100%"></img>
+          <p>Those with the neurological condition Synesthesia can naturally Cross-Sense: they may experience sound as visual flashes of colour and shape, or any other cross-sensory expression — those with Spatial Sequence Synesthesia experience sequences of numbers as physical space, for instance seeing months as a spiral or column. Those with Mirror-Touch Synesthesia may physically feel the sensation of being tapped on the shoulder if they observe another person being tapped.</p>
+          <p><b>The Unsensory</b></p>
+          <p>If that’s the Cross-Sensory, The “Unsensory” could be defined as the imaginary sensation of something intangible, the transmutation of that which is intangible into the realm of the tangible— an imaginary, hallucinatory but tactile sensation of the impossible to sense.</p>
+          <img src="image/unsensory/04.png" width="100%"></img>
+          <p>For instance, there exist people who purport to be able to sense the invisible presence of electromagnetic frequencies. Those with Electromagnetic Hypersensitivity (EHS) claim that they have averse reactions to electromagnetic fields at both intense and everyday levels. Symptoms vary between individuals who claim to have the condition: Headaches, Fatigue, Stress, Goosebumps, and Pain. Those with the condition often attempt to live electromagnetic-free lives, often retreating to remote locations and relying on electricity as little as possible. However, despite very real emotional and physical responses, researchers have found that those with EHS were unable to discern between being exposed to electromagnetic fields in a blind setup — suggesting that the response is psychosomatic in nature.</p>
+          <p>Even if its validity is doubtful, it’s still a compelling idea. Since we can’t sense it directly, to engage with the Unsensory we must interact on a Cross-Sensory plane. Let’s design into this imaginary sense as if it had texture, weight, presence, and so on.</p>
+          <img src="image/unsensory/05.png" width="100%"></img>
+          <br><br>
+          <p><b>The Wind blows through a Magnetic Field: Art and Design in an invisible world.</b></p>
+          <p>Standing in a field of wheat on a windy day, you can watch the full panorama of the wind’s shape and weight pressing sluggish waves across the gold. If you were to pick a stalk from the field and walk to someplace barren, without grain or grass, you could only use it as a probe to intuit the rippling of the wind at a single point — you’ve essentially “tuned in” to a point in the wind in the same way as a receiver tuning into a single frequency of radio.</p>
+          <img src="image/unsensory/06.png" width="100%"></img>
+          <p>Fields of informational “dots” expand a pinpoint of sense into a sensory space. The back of the eyeball is a grid of individual cells that sense light in the world around us, and amalgamate it into the sense of vision. Similarly, a digital photo is a Grid of Pixels that amalgamate to construct the impression of an image from individual pinpoints of colour and tone. Likewise, the Skin is a grid of individual nerve cells across which you can feel the stroking of a fingertip, amalgamating pressure and texture into the sense of touch. If we can register sensory information at a single point, we can sense its shape and space by expanding its dimensions in this way.</p>
+          <br>
+          <img src="image/unsensory/07.png" width="100%"></img>
+          <p>(Magnetic Fields, 1969, at the MACBA — Photo: Roberto Ruiz)</p>
+          <p>One artwork that I feel is especially relevant is the sculpture “Magnetic Fields” by the Greek sculptor Takis. Magnetic pendulums swing over a field of magnetic stalks, which sway and bend towards and away from the pendulum’s magnetic presence. The size and shape of their invisible influence becomes clear through observation of their effect on the field of stalks, similar to wind over wheat — This way, the invisible world of magnetism can be cross-sensed by its physical effect.</p>
+          <br>
+          <center><img src="image/unsensory/08.png" width="70%"></img></center>
+          <br>
+          <p>Similarly, When you place an electronic object on Anthony Dunne and Fiona Raby’s “<u><a href="http://dunneandraby.co.uk/content/books/90/0">Compass Table</a></u>", it allows you to see the presence of the invisible magnetic fields spooling out around it. This example is especially domestic, making palpable the presence of the electromagnetic fields that emanate from appliances and devices inside of our own homes.</p>
+          <br>
+          <img src="image/unsensory/09.png" width="100%"></img>
+          <p></p>
+          <img src="image/unsensory/10.png" width="100%"></img>
+          <br>
+          <p>Nakamura Ryuji’s sculpture “<u><a href="https://www.ryujinakamura.com/2_works/120416_canonneoreal/1_page/canonneoreal.html">Spring</a></u>” is an extremely thin lattice of piano wires. In an evenly-lit room, the lattice is barely visible, almost ghost like. However, when a spotlight is shone through it, it becomes a three-dimensional canvas for light, a field giving tangible form to the projected cone.</p>
+          <p>While these projects aim to give demonstrate something that is present but invisible, these next two projects aim to imply the presence of something that is actually absent.</p>
+          <img src="image/unsensory/11.png" width="100%"></img>
+          <p></p>
+          <img src="image/unsensory/12.png" width="100%"></img>
+          <p>Another project by Nakamura, “<u><a href="https://www.ryujinakamura.com/2_works/101022_llove/1_page/llove.html">Pond</a></u>”, uses 4000 elastic strings to create a tangible “Water-Level” within a home, 70cm off the ground. Here, a permeable barrier, like the surface of water, creates a haptic plane that gives form to an imaginary space.</p>
+          <p>Likewise, Nendo’s installation “<u><a href="https://www.nendo.jp/en/works/nendo-breeze-of-light/">Breeze Of Light</a></u>” seeks to create the impression of an invisible flow of air through a room by using flowers made of polarised film to create rippling waves of shadow across the space.</p>
+          <img src="image/unsensory/13.png" width="100%"></img>
+          <p>In this case, the impression of the presence of wind is inferred by observing (Cross-Sensing) the ripple of the shadow within the installation. If we somehow were unable to feel the wind’s touch on our skin, It would become an unsensory presence, only apparent through its affect on the flowers around us.</p>
+          <p>In summary, we can use this metaphor of fields as a template to Cross-sense the Unsensory. Let’s imagine how we can do this for the phenomenon of Radio Waves.</p>
+          <p><b>Coming in Part 2: "The Presence of Radio"</b></p>
+          <br>
+
+
+
+
+          <div class="listSplit">
             <p>Short Story: Lunar Day</p>
             <p>Thursday</p>
             <p>2021 09 02 - 2:00 PM</p>
@@ -86,7 +148,7 @@
 
           <br>
           <p> I originally wrote this short story in 2018 as Sample Text for a Typeface designed by a friend of Mine, each paragraph typeset in increasingly heavy weights. I still quite like it, so I'm putting it here.</p>
-          <p style="text-align:center;">...</p>
+          <p style="text-align:center;">***</p>
           <p>This morning I woke up an inch above my bed. Disoriented and still shaking off the dust of sleep, I fumblingly turned on my bedside lamp, which itself was an inch midair above the table, the table’s feet suspended an inch above the floor. Around my room, every object was levitating yet perfectly still, as if suspended buoyant underwater.</p>
           <p>Tentatively, I attempted to shift my weight over the side of the bed, the duvet floating up towards the ceiling as I unwrapped myself. The bed was heavy enough that I could grab onto it to get myself upright and carefully lower myself onto the floor. Scraping the carpet with my toes, I was able to clumsily propel myself to the window, opening the blind. The morning sky was filled by an expansive creamish terrain, pockmarked and riddled with divots and horns. Its surface seemed close enough to scrape the radio antennae on the roofs of neighbouring homes, filling the air with a pale otherworldly glow.</p>
           <p>Breakfast was difficult. The water for my coffee refused to pour downwards, instead streaming upwards and dissipating into a scalding hot stratum of fog at about eye level, forcing me to hunch over to stop my glasses from clamming up. I cracked some eggs onto the frying pan, where they began to hover in slowly-spinning discs as they fried. The cheese in my fridge all seemed to be sticking magnetically to its ceiling, vibrating with a dull hum.</p>
