--- a/index.html
+++ b/index.html
@@ -85,20 +85,21 @@
             <p>YEAR</p>
           </div>
           <a href="javascript:void(0);"><div class="listSplit">
-            <p > Paper-Like Printer</p>
+            <p > Imprinted Glass</p>
             <p id="wip"></p>
             <p> 2022 </p>
           </div></a>
           <a href="javascript:void(0);"><div class="listSplit">
+            <p > Paper-Like Printer</p>
+            <p id="wip"></p>
+            <p> 2022 </p>
+          </div></a>
+          <a href="javascript:void(0);" onclick="window.open('project/radiometer.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Window Radiometer </p>
-            <p id="wip"></p>
-            <p> 2021 </p>
+            <p id="new"></p>
+            <p> 2022 </p>
           </div></a>
-          <a href="javascript:void(0);"><div class="listSplit">
-            <p > Dog's Window </p>
-            <p id="wip"></p>
-            <p> 2021 </p>
-          </div></a>
+
 
           <a href="javascript:void(0);" onclick="window.open('project/windowclock.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Window-Like Clock </p>
