Add and link to artworks

--- a/memo.html
+++ b/memo.html
@@ -57,6 +57,7 @@
           <a href="bio.html"><li>Bio</li></a>
           <a href="cv.html"><li>CV</li></a>
           <a href="memo.html"><li>Memo :</li></a>
+          <a href="artworks.html"><li>Artworks</li></a>
 
           <a href="directory.html"><li>Directory</li></a>
           <br>
