--- a/project/radiometer.html
+++ b/project/radiometer.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="content">
-      <p>A radiometer is a device that spins when placed in sunlight. Although initially created as a scientific instrument, today they are more like toys. Since sunlight passes through windows as well, I diecided to incorporate a radiometer into the windowpane itself. This way, something plain and everyday like a window has a playful element added to it.</p>
+      <p>A radiometer is a device that spins when placed in sunlight. Although initially created as a scientific instrument, today they are more like toys. Since sunlight passes through windows as well, I decided to incorporate a radiometer into the windowpane itself. This way, something plain and everyday like a window has a playful element added to it.</p>
       <br>
       <video  autoplay muted loop width="100%">
         <source src="../image/Radiometer/spin landscape.mp4" type="video/mp4">
