--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
           <a href="bio.html"><li>Bio</li></a>
           <a href="cv.html"><li>CV</li></a>
           <a href="memo.html" ><li>Memo </li></a>
+          <a href="artworks.html"><li>Artworks</li></a>
 
           <a href="directory.html"><li>Directory</li></a>
           <br>
@@ -94,6 +95,7 @@
             <p id="wip"></p>
             <p> 2022 </p>
           </div></a>
+
           <a href="javascript:void(0);" onclick="window.open('project/radiometer.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Window Radiometer </p>
             <p id="new"></p>
