add images to jewellery page

--- a/project/jewellery.html
+++ b/project/jewellery.html
@@ -32,8 +32,11 @@
       </div>
       <br>
       <img src="../image/jewellery/cuff.jpg" width="100%"></img>
-      <br>
-      <br>
+      <p></p>
+      <img src="../image/jewellery/cuff 3.jpg" width="100%"></img>
+      <p></p>
+      <img src="../image/jewellery/cuff 2.jpg" width="100%"></img>
+      <p></p>
       <p>Following the ring, I was commissioned to create a simple silver cuff with a similar two dot motif.</p>
 
     </div>
