fix new window method

--- a/garments.html
+++ b/garments.html
@@ -84,13 +84,13 @@
             <p>YEAR</p>
           </div>
 
-          <a href="javascript:void(0);" onclick="window.open('project/rabbit.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/rabbit.html','8','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Follow the Rabbit </p>
             <p id="new"></p>
             <p> 2021 </p>
           </div></a>
 
-          <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Comfort-Seeking Clothing</p>
             <p></p>
             <p> 2021</p>
