--- a/others.html
+++ b/others.html
@@ -86,19 +86,19 @@
 
 
 
-          <a href="javascript:void(0);" onclick="window.open('project/antenna.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/antenna.html','10','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p>Rooftop Antenna</p>
             <p></p>
             <p> 2021</p>
           </div></a>
 
-          <a href="javascript:void(0);" onclick="window.open('project/station-searching.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/station-searching.html','11','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p>Station-Searching  (MV)</p>
             <p></p>
             <p> 2021</p>
           </div></a>
 
-          <a href="javascript:void(0);" onclick="window.open('project/dogs-wall.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/dogs-wall.html','12','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Dog's Wall</p>
             <p></p>
             <p> 2020</p>
