--- a/graphics.html
+++ b/graphics.html
@@ -84,19 +84,19 @@
             <p>YEAR</p>
           </div>
 
-          <a href="javascript:void(0);" onclick="window.open('project/objects on parade.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/objects on parade.html','5','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Objects on Parade </p>
             <p></p>
             <p> 2020 - Ongoing</p>
           </div></a>
 
-          <a href="javascript:void(0);" onclick="window.open('project/greenline.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/greenline.html','6','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Greenline </p>
             <p></p>
             <p> 2020</p>
           </div></a>
 
-          <a href="javascript:void(0);" onclick="window.open('project/logo.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/logo.html','7','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Logo </p>
             <p></p>
             <p> 2019 - Ongoing</p>
