--- a/index.html
+++ b/index.html
@@ -96,26 +96,26 @@
             <p> 2022 </p>
           </div></a>
 
-          <a href="javascript:void(0);" onclick="window.open('project/radiometer.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/radiometer.html','1','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Window Radiometer </p>
             <p id="new"></p>
             <p> 2022 </p>
           </div></a>
 
 
-          <a href="javascript:void(0);" onclick="window.open('project/windowclock.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/windowclock.html','2','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Window-Like Clock </p>
             <p id="updated"></p>
             <p> 2022 </p>
           </div></a>
 
-          <a href="javascript:void(0);" onclick="window.open('project/jewellery.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/jewellery.html','3','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p>Jewellery</p>
             <p id="NEW"></p>
             <p> 2021, 2022</p>
           </div></a>
 
-          <a href="javascript:void(0);" onclick="window.open('project/buildit.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/buildit.html','4','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Build-it Note </p>
             <p></p>
             <p> 2020 </p>
@@ -132,17 +132,17 @@
             <p>YEAR</p>
           </div>
 
-          <a href="javascript:void(0);" onclick="window.open('project/objects on parade.html','name','width=300,height=300')" rel="noreferrer noopener"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/objects on parade.html','5','width=300,height=300')" rel="noreferrer noopener"><div class="listSplit">
             <p> Objects on Parade </p>
             <p></p>
             <p> 2020 - Ongoing</p>
           </div></a>
-          <a href="javascript:void(0);" onclick="window.open('project/greenline.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/greenline.html','6','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Greenline </p>
             <p></p>
             <p> 2020</p>
           </div></a>
-          <a href="javascript:void(0);" onclick="window.open('project/logo.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/logo.html','7','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Logo </p>
             <p></p>
             <p> 2019 - Ongoing</p>
@@ -163,13 +163,13 @@
 
 
 
-          <a href="javascript:void(0);" onclick="window.open('project/rabbit.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/rabbit.html','8','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Follow the Rabbit </p>
             <p id="new"></p>
             <p> 2021 </p>
           </div></a>
 
-          <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Comfort-Seeking Clothing</p>
             <p></p>
             <p> 2021</p>
@@ -190,19 +190,19 @@
 
 
 
-          <a href="javascript:void(0);" onclick="window.open('project/antenna.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/antenna.html','10','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p>Rooftop Antenna</p>
             <p id="NEW"></p>
             <p> 2021</p>
           </div></a>
 
-          <a href="javascript:void(0);" onclick="window.open('project/station-searching.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/station-searching.html','11','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p>Station-Searching  (MV)</p>
             <p></p>
             <p> 2021</p>
           </div></a>
 
-          <a href="javascript:void(0);" onclick="window.open('project/dogs-wall.html','name','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/dogs-wall.html','12','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Dog's Wall</p>
             <p></p>
             <p> 2020</p>
