--- a/project/radiometer.html
+++ b/project/radiometer.html
@@ -11,7 +11,9 @@
     </div>
 
     <div class="content">
-      <p>A radiometer is a device that spins when placed in sunlight. Although initially created as a scientific instrument, today they are more like toys. Since sunlight passes through windows as well, I decided to incorporate a radiometer into the windowpane itself. This way, something plain and everyday like a window has a playful element added to it.</p>
+      <p>A radiometer is a device that spins when placed in sunlight. Although initially created as a scientific instrument, today they are more like toys. I’ve been fascinated by them for a while, it’s very calming to idly watch mine spin in the morning sun before I leave the house. Since the sunlight passes through a window to reach the radiometer, I decided to incorporate the radiometer into the windowpane itself. This way, something playful can be embedded into something as plain and everyday as a window.</p>
+      
+      <p>(If videos do not play, please try another browser.)</p>
       <br>
       <video  autoplay muted loop width="100%">
         <source src="../image/Radiometer/spin landscape.mp4" type="video/mp4">
