re-order CV, add sites to directory

--- a/cv.html
+++ b/cv.html
@@ -85,15 +85,9 @@
           </div>
 
           <div class="listSplit">
-            <p>Highgate Wood School</p>
-            <p>Secondary Education</p>
-            <p>2012 - 2017</p>
-          </div>
-
-          <div class="listSplit">
-            <p>Highgate Wood School 6th Form</p>
-            <p>A-Level Education<br><br>Art (A), Media Studies (A), English Literature AS (A), Psychology (C)</p>
-            <p>2017 - 2019</p>
+            <p>Goldsmiths University of London</p>
+            <p>Design BA</p>
+            <p>2020 - Ongoing</p>
           </div>
 
           <div class="listSplit">
@@ -103,10 +97,17 @@
           </div>
 
           <div class="listSplit">
-            <p>Goldsmiths University of London</p>
-            <p>Design BA</p>
-            <p>2020 - Ongoing</p>
+            <p>Highgate Wood School 6th Form</p>
+            <p>A-Level Education<br><br>Art (A), Media Studies (A), English Literature AS (A), Psychology (C)</p>
+            <p>2017 - 2019</p>
           </div>
+
+          <div class="listSplit">
+            <p>Highgate Wood School</p>
+            <p>Secondary Education</p>
+            <p>2012 - 2017</p>
+          </div>
+
           <br>
           <br>
 
@@ -119,10 +120,17 @@
           </div>
 
           <div class="listSplit">
-            <p>Brown University</p>
-            <p>SPARK Summer Course: Aerospace Engineering</p>
-            <p>2015</p>
+            <p>The Art Academy London</p>
+            <p>Oil Painting Evening Course</p>
+            <p>2022 (Ongoing)</p>
           </div>
+
+          <div class="listSplit">
+            <p>Montserrat School of Art</p>
+            <p>Summer Course</p>
+            <p>2017</p>
+          </div>
+
           <div class="listSplit">
             <p>Brown University</p>
             <p>SPARK Summer Course: Internet of Things Engineering</p>
@@ -139,10 +147,11 @@
             <p>2015 - 2017</p>
           </div>
           <div class="listSplit">
-            <p>Montserrat School of Art</p>
-            <p>Summer Course</p>
-            <p>2017</p>
+            <p>Brown University</p>
+            <p>SPARK Summer Course: Aerospace Engineering</p>
+            <p>2015</p>
           </div>
+
 
           <br>
           <br>
@@ -196,7 +205,7 @@
           </div>
           <div class="listSplit">
             <p>Adobe Aftereffects</p>
-            <p>Intermediate Skill</p>
+            <p>Beginner Skill</p>
             <p>Video Editing, Animation</p>
           </div>
           <div class="listSplit">
