--- a/directory.html
+++ b/directory.html
@@ -122,6 +122,18 @@
             <p> DESIGNER </p>
           </div></a>
 
+          <a href="https://bananamoon.jp" target="blank"><div class="listSplit">
+            <p>bananamoon.jp</p>
+            <p id="info">BANANA MOON (jp)</p>
+            <p> STUDIO </p>
+          </div></a>
+
+          <a href="https://bananamoon.jp" target="blank"><div class="listSplit">
+            <p>ryujinakamura.com</p>
+            <p id="info">RYUJI NAKAMURA (jp)</p>
+            <p> STUDIO </p>
+          </div></a>
+
           <a href="http://swimmingdesign.com/" target="blank"><div class="listSplit">
             <p>swimmingdesign.com</p>
             <p id="info"> TOMOHIRO OKAZAKI (jp)</p>
