add and link to Bolt Book

--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
             <p> 2022 </p>
           </div></a>
 
+          <a href="javascript:void(0);" onclick="window.open('project/boltbook.html','13','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p > Bolt-Bound Book </p>
+            <p id="new"></p>
+            <p> 2022 </p>
+          </div></a>
+
           <a href="javascript:void(0);" onclick="window.open('project/radiometer.html','1','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Window Radiometer </p>
             <p id="new"></p>
@@ -105,13 +111,13 @@
 
           <a href="javascript:void(0);" onclick="window.open('project/windowclock.html','2','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Window-Like Clock </p>
-            <p id="updated"></p>
+            <p></p>
             <p> 2022 </p>
           </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/jewellery.html','3','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p>Jewellery</p>
-            <p id="NEW"></p>
+            <p></p>
             <p> 2021, 2022</p>
           </div></a>
 
@@ -165,7 +171,7 @@
 
           <a href="javascript:void(0);" onclick="window.open('project/rabbit.html','8','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Follow the Rabbit </p>
-            <p id="new"></p>
+            <p></p>
             <p> 2021 </p>
           </div></a>
 
@@ -192,7 +198,7 @@
 
           <a href="javascript:void(0);" onclick="window.open('project/antenna.html','10','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p>Rooftop Antenna</p>
-            <p id="NEW"></p>
+            <p></p>
             <p> 2021</p>
           </div></a>
 
