--- a/gallery.html
+++ b/gallery.html
@@ -82,8 +82,8 @@
         <p></p>
         <p></p>
         <p></p>
+        <a href="javascript:void(0);" onclick="window.open('project/machineglasses.html','14','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/machineglasses.png"></img></a>
 
-        <a href="javascript:void(0);" onclick="window.open('project/jewellery.html','3','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/jewellery.png"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/radiometer.html','1','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/radiometer.gif"></img></a>
 
 
@@ -91,15 +91,18 @@
         <a href="javascript:void(0);" onclick="window.open('project/rabbit.html','8','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/rabbit.png"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/windowclock.html','2','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/window.png"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/boltbook.html','13','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/boltbook.png"></img></a>
+        <a href="javascript:void(0);" onclick="window.open('project/jewellery.html','3','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/jewellery.png"></img></a>
 
         <a href="javascript:void(0);" onclick="window.open('project/buildit.html','4','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/buildit.png"></img></a>
+        <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><img src="image/comfort-clothing/10.jpg" id="grey"></img></a>
+
         <a href="javascript:void(0);" onclick="window.open('project/antenna.html','10','width=600,height=700')" rel="noreferrer noopener"><img src="image/antenna/cover for radio show-02.png"></img></a>
 
 
         <a href="javascript:void(0);" onclick="window.open('project/objects on parade.html','5','width=600,height=700')" rel="noreferrer noopener"><img src="image/water-tower/Tower 8.gif"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/greenline.html','6','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/greenline.png"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/logo.html','7','width=600,height=700')" rel="noreferrer noopener"><img src="image/logo/twins 1.png"></img></a>
-        <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><img src="image/comfort-clothing/10.jpg" id="grey"></img></a>
+
         <a href="javascript:void(0);" onclick="window.open('project/station-searching.html','11','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/station searching.png"></img></a>
 
         <a href="javascript:void(0);" onclick="window.open('project/dogs-wall.html','12','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/dogs wall.png"></img></a>
