--- a/objects.html
+++ b/objects.html
@@ -83,6 +83,12 @@
             <p>YEAR</p>
           </div>
 
+          <a href="javascript:void(0);" onclick="window.open('project/boltbook.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p > Machine Glasses </p>
+            <p id="new"></p>
+            <p> 2022 </p>
+          </div></a>
+
           <a href="javascript:void(0);" onclick="window.open('project/boltbook.html','13','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Bolt-Bound Book </p>
             <p id="new"></p>
