--- a/objects.html
+++ b/objects.html
@@ -83,7 +83,7 @@
             <p>YEAR</p>
           </div>
 
-          <a href="javascript:void(0);" onclick="window.open('project/boltbook.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/machineglasses.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Machine Glasses </p>
             <p id="new"></p>
             <p> 2022 </p>
