change gallery img for comfort seeking clothing

--- a/gallery.html
+++ b/gallery.html
@@ -94,7 +94,7 @@
         <a href="javascript:void(0);" onclick="window.open('project/jewellery.html','3','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/jewellery.png"></img></a>
 
         <a href="javascript:void(0);" onclick="window.open('project/buildit.html','4','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/buildit.png"></img></a>
-        <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><img src="image/comfort-clothing/10.jpg" id="grey"></img></a>
+        <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/comfortseeking.png"></img></a>
 
         <a href="javascript:void(0);" onclick="window.open('project/antenna.html','10','width=600,height=700')" rel="noreferrer noopener"><img src="image/antenna/cover for radio show-02.png"></img></a>
 
