various changes, added telephone pole story

--- a/cv.html
+++ b/cv.html
@@ -76,6 +76,26 @@
 
       <div id="theList">
         <section>
+
+          <p> EXHIBITION </p>
+
+          <div class="listSplit">
+            <p>TITLE</p>
+            <p>INFO</p>
+            <p>YEAR</p>
+          </div>
+
+          <div class="listSplit">
+            <p>Weighted Vessels in a Breathing Room</p>
+            <p>Group show with Tzukasa Kimura, Siin Lee, and Amber Harrisson at AMP Gallery, London.</p>
+            <p>2022</p>
+          </div>
+
+          <br>
+          <br>
+
+
+
           <p> EDUCATION </p>
 
           <div class="listSplit">
@@ -122,7 +142,7 @@
           <div class="listSplit">
             <p>The Art Academy London</p>
             <p>Oil Painting Evening Course</p>
-            <p>2022 (Ongoing)</p>
+            <p>2022</p>
           </div>
 
           <div class="listSplit">
