--- a/cv.html
+++ b/cv.html
@@ -77,6 +77,23 @@
       <div id="theList">
         <section>
 
+          <p> WORK </p>
+
+          <div class="listSplit">
+            <p>COMPANY</p>
+            <p>ROLE</p>
+            <p>YEAR</p>
+          </div>
+
+          <a href="https://uo-design.jp" target="_blank"><div class="listSplit">
+            <p>UO Design - Hamamatsu, Japan</p>
+            <p>3 Week Internship</p>
+            <p>2022</p>
+          </div></a>
+
+          <br>
+          <br>
+
           <p> EXHIBITION </p>
 
           <div class="listSplit">
