Add WIP notes, Remove artwork page links, update 2023 footer

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <a href="bio.html"><li>Bio</li></a>
           <a href="cv.html"><li>CV</li></a>
           <a href="memo.html" ><li>Memo </li></a>
-          <a href="artworks.html"><li>Artworks</li></a>
+          
 
           <a href="directory.html"><li>Directory</li></a>
           <br>
@@ -85,6 +85,18 @@
             <p></p>
             <p>YEAR</p>
           </div>
+
+          <a href="javascript:void(0);" rel="noreferrer noopener" ><div class="listSplit">
+            <p > Vane </p>
+            <p id="wip"></p>
+            <p> 2023 </p>
+          </div></a>
+
+          <a href="javascript:void(0);" rel="noreferrer noopener" ><div class="listSplit">
+            <p > Radio-Field / 電波庭 </p>
+            <p id="wip"></p>
+            <p> 2022 </p>
+          </div></a>
 
 
           <a href="javascript:void(0);" onclick="window.open('project/machineglasses.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
@@ -257,7 +269,7 @@
 </div>
 
 <div class="footer">
-  <p>: : Copyright © CALEB WOODWARD 2021 - All rights reserved. : :</p>
+  <p>: : Copyright © CALEB WOODWARD 2023 - All rights reserved. : :</p>
 </div>
 
 </body>
