--- a/cv.html
+++ b/cv.html
@@ -56,7 +56,7 @@
           <a href="bio.html"><li>Bio</li></a>
           <a href="cv.html"><li>CV :</li></a>
           <a href="memo.html"><li>Memo</li></a>
-          
+
 
           <a href="directory.html"><li>Directory</li></a>
           <br>
@@ -202,7 +202,7 @@
           </div>
           <div class="listSplit">
             <p>Japanese</p>
-            <p>~ N5/N4 Level <br>(Basic Conversation)</p>
+            <p>JLPT N4 Level</p>
             <p>2020 - Ongoing</p>
           </div>
           <br>
