--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <a href="bio.html"><li>Bio</li></a>
           <a href="cv.html"><li>CV</li></a>
           <a href="memo.html" ><li>Memo </li></a>
-          
+
 
           <a href="directory.html"><li>Directory</li></a>
           <br>
@@ -87,7 +87,7 @@
           </div>
 
           <a href="javascript:void(0);" rel="noreferrer noopener" ><div class="listSplit">
-            <p > Vane </p>
+            <p > Mobile </p>
             <p id="wip"></p>
             <p> 2023 </p>
           </div></a>
