update logo gallery icon

--- a/gallery.html
+++ b/gallery.html
@@ -88,7 +88,7 @@
 
 
 
-        
+
         <a href="javascript:void(0);" onclick="window.open('project/windowclock.html','2','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/window.png"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/boltbook.html','13','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/boltbook.png"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/jewellery.html','3','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/jewellery.png"></img></a>
@@ -101,7 +101,7 @@
 
         <a href="javascript:void(0);" onclick="window.open('project/objects on parade.html','5','width=600,height=700')" rel="noreferrer noopener"><img src="image/water-tower/Tower 8.gif"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/greenline.html','6','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/greenline.png"></img></a>
-        <a href="javascript:void(0);" onclick="window.open('project/logo.html','7','width=600,height=700')" rel="noreferrer noopener"><img src="image/logo/twins 1.png"></img></a>
+        <a href="javascript:void(0);" onclick="window.open('project/logo.html','7','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/logo.png"></img></a>
 
         <a href="javascript:void(0);" onclick="window.open('project/station-searching.html','11','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/station searching.png"></img></a>
 
